# infobord-cli

./: README.md  pyproject.toml  run.sh
src/: frame_sys.py  main.py
src/infobord/: main.py  mqtt_state.py
